--- a/src/site/apt/release-notes.apt.vm
+++ b/src/site/apt/release-notes.apt.vm
@@ -2,6 +2,12 @@ Release Notes
 
 * ${currentVersion}
 
-  * Initial release
+  * Fix a bug with the timestamp value in the GTFS-realtime FeedHeader.
 
   * Full Documentation: {{${site_base_url}/onebusaway-gtfs-realtime-from-siri-cli/${currentVersion}/}}
+  
+* 1.0.0
+
+  * Initial release
+
+  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-realtime-from-siri-cli/1.0.0/}}
