Update release notes for next development cycle.

--- a/src/site/apt/release-notes.apt.vm
+++ b/src/site/apt/release-notes.apt.vm
@@ -2,12 +2,16 @@ Release Notes
 
 * ${currentVersion}
 
+  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-realtime-from-siri-cli/${currentVersion}/}}
+
+* 1.1.0
+
   * Add a listener method to GtfsRealtimeProvider for receiving notification of updates.  Also provide a default
     implementation of that behavior.
     
   * Bump onebusaway-gtfs-realtime-api to 1.1.0.
 
-  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-realtime-from-siri-cli/${currentVersion}/}}
+  * Full Documentation: {{${site_base_url}/onebusaway-gtfs-realtime-from-siri-cli/1.1.0/}}
 
 * 1.0.1
 
